--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
     "expo": "~43.0.2",
     "expo-camera": "~12.0.3",
     "expo-status-bar": "~1.1.0",
@@ -18,6 +20,7 @@
     "react-native": "0.64.3",
     "react-native-elements": "https://github.com/react-native-elements/react-native-elements#dist",
     "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.9.0",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "tailwind-react-native-classnames": "^1.5.1"
