--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.14",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@supabase/supabase-js": "^1.28.5",
     "expo": "~43.0.2",
     "expo-camera": "~12.0.3",
     "expo-status-bar": "~1.1.0",
