--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-elements": "https://github.com/react-native-elements/react-native-elements#dist",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
+    "react-native-url-polyfill": "^1.3.0",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "tailwind-react-native-classnames": "^1.5.1"
