--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.14",
+    "@react-native-masked-view/masked-view": "0.2.5",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@react-navigation/stack": "^6.0.11",
     "@supabase/supabase-js": "^1.28.5",
     "expo": "~43.0.2",
     "expo-camera": "~12.0.3",
@@ -22,6 +24,7 @@
     "react-native": "0.64.3",
     "react-native-dotenv": "^3.3.0",
     "react-native-elements": "https://github.com/react-native-elements/react-native-elements#dist",
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
     "react-native-url-polyfill": "^1.3.0",
