--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
+    "@reduxjs/toolkit": "^1.7.0",
     "@supabase/supabase-js": "^1.28.5",
     "expo": "~43.0.2",
     "expo-camera": "~12.0.3",
@@ -30,6 +31,7 @@
     "react-native-url-polyfill": "^1.3.0",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
+    "react-redux": "^7.2.6",
     "tailwind-react-native-classnames": "^1.5.1"
   },
   "devDependencies": {
