--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@reduxjs/toolkit": "^1.7.0",
     "@supabase/supabase-js": "^1.28.5",
     "expo": "~43.0.2",
-    "expo-camera": "~12.0.3",
+    "expo-camera": "^12.0.3",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
