--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,17 +5,24 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Debug iOS",
-      "request": "launch",
-      "type": "reactnative",
+      "name": "Debug Android",
       "cwd": "${workspaceFolder}",
+      "type": "reactnative",
+      "request": "launch",
+      "platform": "android"
+    },
+    {
+      "name": "Debug iOS",
+      "cwd": "${workspaceFolder}",
+      "type": "reactnative",
+      "request": "launch",
       "platform": "ios"
     },
     {
       "name": "Attach to packager",
-      "request": "attach",
-      "type": "reactnative",
       "cwd": "${workspaceFolder}",
+      "type": "reactnative",
+      "request": "attach"
     }
   ]
 }
