--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^6.0.11",
     "@reduxjs/toolkit": "^1.7.0",
     "@supabase/supabase-js": "^1.28.5",
+    "base64-arraybuffer": "^1.0.1",
     "expo": "~43.0.2",
     "expo-camera": "^12.0.3",
     "expo-status-bar": "~1.1.0",
